<resources>
    <string name="app_name">MyResume</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="edit_cv">EDIT CV</string>
    <string name="view_cv">VIEW CV</string>
    <string name="full_name">Full name</string>
    <string name="slack_username">Slack username</string>
    <string name="github_handle">Github handle</string>
    <string name="user_bio">User bio</string>
    <string name="save">SAVE</string>
</resources>